--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 DATABASE_URL=postgresql://neondb_owner:npg_xPepdsNm8RC9@ep-nameless-glitter-ahrnt000-pooler.c-3.us-east-1.aws.neon.tech/neondb?sslmode=require
 BETTER_AUTH_SECRET=k8Xp2mN9vQ4wR7jL1sT6yH3bU0cF5gA8dZ2eW9iO4pM7nK1xJ6
-FRONTEND_URL=https://todo.techkl.de
-CORS_ORIGINS=https://todo.techkl.de
+FRONTEND_URL=http://localhost:3000
+CORS_ORIGINS=http://localhost:3000
